<resources>
    <string name="app_name">EiKa</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="modul1">aktuelle Liste</string>
    <string name="modul2">Listenverwaltung</string>
    <string name="modul3">Statistik</string>
    <string name="hilfe">Tutorial</string>
    <string name="wir">Impressum</string>
    <string name="divider">Info</string>
    <string name="subheader">Ein Projekt von IT 0815+1</string>

    <string name="action_sort">Liste sortieren</string>
    <string name="action_rename">Liste umbenennen</string>
    <string name="action_load">Liste laden</string>
    <string name="action_save">Liste speichern</string>

    <string name="input_artikel">Artikel</string>
    <string name="input_anzahl">Anzahl</string>


    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">Weiter</string>
    <string name="skip">Überspringen</string>
    <string name="start">Verstanden</string>

    <string name="slide_1_title">Hallo lieber Erstbenutzer</string>
    <string name="slide_1_desc">Vielen Dank das du unsere App ausgesucht hast um dein Alltag zu Erleichtern.

                                Im weiteren Tutorial Bekommst du ein Überblick der
                                Funktionalität der App.

    Wir Wünschen dir mit der App eine Lange Standhafte Zweisamkeit.

    Pass gut auf die App auf, und Bitte benutze Sie jeden Tag, damit Sie auch ja immer ihre aufgaben erfüllt.</string>

    <string name="slide_2_title">Funktionen</string>
    <string name="slide_2_desc">Ist das nicht der Hammer!</string>

    <string name="slide_3_title">Noch mehr Funktionen!</string>
    <string name="slide_3_desc">Boah!</string>

    <string name="slide_4_title">Viel Spaß!</string>
    <string name="slide_4_desc">Mach was draus!</string>

    <string name="action_scan_ean">SCAN EAN</string>
    <string name="context_delete">Artikel löschen</string>
    <string name="context_edit">Bearbeiten</string>
</resources>
